# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: raytracer.h  sphere.h  utils.h
src/: main.cpp  raytracer.cpp  raytracer.h  sphere.cpp  sphere.h  utils.h
